--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "electron-devtools-installer": "^3.2.0",
     "electron-is-dev": "^2.0.0",
     "electron-log": "^4.4.8",
@@ -26,7 +29,8 @@
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.8",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "react-start": "react-scripts start",
