--- a/package.json
+++ b/package.json
@@ -14,23 +14,24 @@
   },
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.0",
+    "@testing-library/user-event": "^14.5.1",
     "electron-devtools-installer": "^3.2.0",
     "electron-is-dev": "^2.0.0",
-    "electron-log": "^4.4.8",
-    "electron-updater": "^5.3.0",
+    "electron-log": "^5.0.0",
+    "electron-updater": "^6.1.4",
     "node-notifier": "^10.0.1",
+    "punycode": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.10.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "^5.0.1",
-    "reactstrap": "^9.1.8",
+    "reactstrap": "^9.2.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^3.5.0"
   },
   "scripts": {
     "react-start": "react-scripts start",
@@ -53,13 +54,13 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "concurrently": "^8.0.1",
+    "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
-    "electron": "^24.0.0",
-    "electron-builder": "^23.6.0",
+    "electron": "^27.0.4",
+    "electron-builder": "^24.6.4",
     "electron-debug": "^3.2.0",
-    "prettier": "^2.8.7",
-    "wait-on": "^7.0.1"
+    "prettier": "^3.1.0",
+    "wait-on": "^7.1.0"
   },
   "main": "public/electron.js",
   "homepage": "./",
